--- a/src/main/resources/WEB-INF/views/bio.html
+++ b/src/main/resources/WEB-INF/views/bio.html
@@ -3,6 +3,11 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
+<!DOCTYPE html>
+<!--
+Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
+Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+-->
 <html>
     <head>
         <title>Miodigy</title>
@@ -54,10 +59,60 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
         <section>
             <article>
-                <h1>London</h1>
-                <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-                <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-            </article>
+                1.books
+                java2 basics (2008)
+                javascript basics
+                javascript everything about Ajax
+                php+ mysql
+                J2ee 6
+                joshua bloch effective programming
+                java9 for advanced developers
+                javafx 9
+                android - composing user interface
+                html, css, javasript - complete frontend book (as a reminder)
+                spring
+                jpa
+
+                2.articles
+                hibernate, jooq
+
+                3.tutorials
+                html, css also with w3schools
+                aws - just theory and basics (lambdas theraform architecture queues storages)
+                GCP - from tutorials and theory into deploying my own application and designing scalable bigdata systems.
+                Apache Camel - my latest choice for miodi.com
+
+                4.work
+                dropwizard < SpringBoot > tomcat > glassfish (0 project ever started on it)
+                linux.
+                Enterprise Messaging Patterns (Refinitiv EventPlatform Framework)
+                wsdl soap
+                xml parsers
+                pojo, json serializers, jackson
+                postman, jmeter
+                http rest callers for java
+                http non cors requests
+                queue systems - TIBCO, KAFKA
+
+                nonrelational databases
+
+                hbase - team wrote own ORM for hbase
+                I have implemented html js tool to query hbase via rest - even filters could been applyied, and column values from search results could be easiely copied from browswer rather than from hbase shell as it's so annoying and complicated
+                anyway I'm fluent in shell querying as well, capacaity maintanance (merging, splitting regions for egz)
+                most important knowledge was that 
+                MapReduce jobs run on hadoop cluster - java app sent to the data (not data to the java app:) and yes as many regions as many mapreduce mappers processing simultaneously
+
+                elasticsearch (json documents),
+                querying, filtering, agregations, script querying (lucene syntax)
+                ELK stack. + own monitoring implementation relaying on es logs
+                junit and integration tests (houndreds)
+                tools for graphical interperetaions of ES results(aggregations), monitoring and even single ES document editor
+                
+                relational database
+                PostgreSQL - CRUD, procedures, ACID, backups, schemas, ORMs
+
+
+                5.studies</article>
 
 
             <aside>Something on the side</aside></section>
@@ -70,3 +125,4 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </body>
 
 </html>
+
